--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
             const script = document.createElement("script");
             script.src = src;
             document.head.appendChild(script);
-        }</script><script type="module" src="script.js"></script><script defer="defer" src="bundle.ac70d88cef0be889e6f9.js"></script></body></html>
+        }
+        document.addEventListener("DOMContentLoaded", () => {
+            document.body.style.overflowY = "auto";
+        });</script><script type="module" src="script.js"></script><script defer="defer" src="bundle.ac70d88cef0be889e6f9.js"></script></body></html>
